@@ -1,15 +1,13 @@
 /*
- * Hibernate, Relational Persistence for Idiomatic Java
- *
- * License: GNU Lesser General Public License (LGPL), version 2.1 or later.
- * See the lgpl.txt file in the root directory or <http://www.gnu.org/licenses/lgpl-2.1.html>.
+ * SPDX-License-Identifier: LGPL-2.1-or-later
+ * Copyright Red Hat Inc. and Hibernate Authors
  */
 package org.hibernate.proxy.pojo.bytebuddy;
 
 import java.io.Serializable;
 import java.lang.reflect.Method;
-import java.lang.reflect.Type;
-import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
@@ -17,8 +15,7 @@ import java.util.function.Function;
 
 import org.hibernate.HibernateException;
 import org.hibernate.bytecode.internal.bytebuddy.ByteBuddyState;
-import org.hibernate.cfg.Environment;
-import org.hibernate.internal.CoreMessageLogger;
+import org.hibernate.engine.spi.PrimeAmongSecondarySupertypes;
 import org.hibernate.internal.util.ReflectHelper;
 import org.hibernate.proxy.HibernateProxy;
 import org.hibernate.proxy.ProxyConfiguration;
@@ -27,16 +24,18 @@ import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.NamingStrategy;
 import net.bytebuddy.TypeCache;
 import net.bytebuddy.description.modifier.Visibility;
+import net.bytebuddy.description.type.TypeDefinition;
+import net.bytebuddy.description.type.TypeDescription;
+import net.bytebuddy.description.type.TypeList;
 import net.bytebuddy.dynamic.DynamicType;
 import net.bytebuddy.dynamic.scaffold.subclass.ConstructorStrategy;
 import net.bytebuddy.implementation.SuperMethodCall;
-
-import static org.hibernate.internal.CoreLogging.messageLogger;
+import net.bytebuddy.pool.TypePool;
 
 public class ByteBuddyProxyHelper implements Serializable {
 
-	private static final CoreMessageLogger LOG = messageLogger( ByteBuddyProxyHelper.class );
-	private static final String PROXY_NAMING_SUFFIX = Environment.useLegacyProxyClassnames() ? "HibernateProxy$" : "HibernateProxy";
+	private static final String PROXY_NAMING_SUFFIX = "HibernateProxy";
+	private static final TypeDescription OBJECT = TypeDescription.ForLoadedType.of(Object.class);
 
 	private final ByteBuddyState byteBuddyState;
 
@@ -44,38 +43,53 @@ public class ByteBuddyProxyHelper implements Serializable {
 		this.byteBuddyState = byteBuddyState;
 	}
 
-	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public Class buildProxy(final Class persistentClass, final Class[] interfaces) {
-		Set<Class<?>> key = new HashSet<Class<?>>();
+	@SuppressWarnings("rawtypes")
+	public Class buildProxy(
+			final Class<?> persistentClass,
+			final Class<?>[] interfaces) {
+		Set<Class<?>> key = new HashSet<>();
 		if ( interfaces.length == 1 ) {
 			key.add( persistentClass );
 		}
-		key.addAll( Arrays.<Class<?>>asList( interfaces ) );
+		Collections.addAll( key, interfaces );
 
-		return byteBuddyState.loadProxy( persistentClass, new TypeCache.SimpleKey( key ), proxyBuilder( persistentClass, interfaces ) );
+		return byteBuddyState.loadProxy( persistentClass, new TypeCache.SimpleKey( key ),
+				proxyBuilder( TypeDescription.ForLoadedType.of( persistentClass ), new TypeList.Generic.ForLoadedTypes( interfaces ) ) );
+	}
+
+	/**
+	 * @deprecated Use {@link #buildUnloadedProxy(TypePool, TypeDefinition, Collection)} instead.
+	 */
+	@Deprecated
+	public DynamicType.Unloaded<?> buildUnloadedProxy(final Class<?> persistentClass, final Class<?>[] interfaces) {
+		return byteBuddyState.make( proxyBuilder( TypeDescription.ForLoadedType.of( persistentClass ),
+				new TypeList.Generic.ForLoadedTypes( interfaces ) ) );
 	}
 
 	/**
 	 * Do not remove: used by Quarkus
 	 */
-	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public DynamicType.Unloaded<?> buildUnloadedProxy(final Class persistentClass, final Class[] interfaces) {
-		return byteBuddyState.make( proxyBuilder( persistentClass, interfaces ) );
+	public DynamicType.Unloaded<?> buildUnloadedProxy(TypePool typePool, TypeDefinition persistentClass,
+			Collection<? extends TypeDefinition> interfaces) {
+		return byteBuddyState.make( typePool, proxyBuilder( persistentClass, interfaces ) );
 	}
 
-	private Function<ByteBuddy, DynamicType.Builder<?>> proxyBuilder(Class persistentClass, Class[] interfaces) {
-		return byteBuddy -> byteBuddy
-				.ignore( byteBuddyState.getProxyDefinitionHelpers().getGroovyGetMetaClassFilter() )
-				.with( new NamingStrategy.SuffixingRandom( PROXY_NAMING_SUFFIX, new NamingStrategy.SuffixingRandom.BaseNameResolver.ForFixedValue( persistentClass.getName() ) ) )
-				.subclass( interfaces.length == 1 ? persistentClass : Object.class, ConstructorStrategy.Default.IMITATE_SUPER_CLASS_OPENING )
-				.implement( (Type[]) interfaces )
-				.method( byteBuddyState.getProxyDefinitionHelpers().getVirtualNotFinalizerFilter() )
-						.intercept( byteBuddyState.getProxyDefinitionHelpers().getDelegateToInterceptorDispatcherMethodDelegation() )
-				.method( byteBuddyState.getProxyDefinitionHelpers().getHibernateGeneratedMethodFilter() )
+	private Function<ByteBuddy, DynamicType.Builder<?>> proxyBuilder(TypeDefinition persistentClass,
+			Collection<? extends TypeDefinition> interfaces) {
+		ByteBuddyState.ProxyDefinitionHelpers helpers = byteBuddyState.getProxyDefinitionHelpers();
+		return byteBuddy -> helpers.appendIgnoreAlsoAtEnd( byteBuddy
+				.ignore( helpers.getGroovyGetMetaClassFilter() )
+				.with( new NamingStrategy.SuffixingRandom( PROXY_NAMING_SUFFIX, new NamingStrategy.Suffixing.BaseNameResolver.ForFixedValue( persistentClass.getTypeName() ) ) )
+				.subclass( interfaces.size() == 1 ? persistentClass : OBJECT, ConstructorStrategy.Default.IMITATE_SUPER_CLASS_OPENING )
+				.implement( interfaces )
+				.method( helpers.getVirtualNotFinalizerFilter() )
+						.intercept( helpers.getDelegateToInterceptorDispatcherMethodDelegation() )
+				.method( helpers.getProxyNonInterceptedMethodFilter() )
 						.intercept( SuperMethodCall.INSTANCE )
 				.defineField( ProxyConfiguration.INTERCEPTOR_FIELD_NAME, ProxyConfiguration.Interceptor.class, Visibility.PRIVATE )
 				.implement( ProxyConfiguration.class )
-						.intercept( byteBuddyState.getProxyDefinitionHelpers().getInterceptorFieldAccessor() );
+						.intercept( helpers.getInterceptorFieldAccessor() )
+		);
 	}
 
 	public HibernateProxy deserializeProxy(SerializableProxy serializableProxy) {
@@ -93,22 +107,28 @@ public class ByteBuddyProxyHelper implements Serializable {
 
 		// note: interface is assumed to already contain HibernateProxy.class
 		try {
-			final Class proxyClass = buildProxy(
+			final Class<?> proxyClass = buildProxy(
 					serializableProxy.getPersistentClass(),
 					serializableProxy.getInterfaces()
 			);
-			final HibernateProxy proxy = (HibernateProxy) proxyClass.newInstance();
-			( (ProxyConfiguration) proxy ).$$_hibernate_set_interceptor( interceptor );
-			return proxy;
+			PrimeAmongSecondarySupertypes instance = (PrimeAmongSecondarySupertypes) proxyClass.getDeclaredConstructor().newInstance();
+			final ProxyConfiguration proxyConfiguration = instance.asProxyConfiguration();
+			if ( proxyConfiguration == null ) {
+				throw new HibernateException( "Produced proxy does not correctly implement ProxyConfiguration" );
+			}
+			proxyConfiguration.$$_hibernate_set_interceptor( interceptor );
+			final HibernateProxy hibernateProxy = instance.asHibernateProxy();
+			if ( hibernateProxy == null ) {
+				throw new HibernateException( "Produced proxy does not correctly implement HibernateProxy" );
+			}
+			return hibernateProxy;
 		}
 		catch (Throwable t) {
-			final String message = LOG.bytecodeEnhancementFailed( serializableProxy.getEntityName() );
-			LOG.error( message, t );
-			throw new HibernateException( message, t );
+			throw new HibernateException( "Bytecode enhancement failed for entity '"
+					+ serializableProxy.getEntityName() + "'", t );
 		}
 	}
 
-	@SuppressWarnings("unchecked")
 	private static Method resolveIdGetterMethod(SerializableProxy serializableProxy) {
 		if ( serializableProxy.getIdentifierGetterMethodName() == null ) {
 			return null;
@@ -131,7 +151,6 @@ public class ByteBuddyProxyHelper implements Serializable {
 		}
 	}
 
-	@SuppressWarnings("unchecked")
 	private static Method resolveIdSetterMethod(SerializableProxy serializableProxy) {
 		if ( serializableProxy.getIdentifierSetterMethodName() == null ) {
 			return null;
